--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,8 +174,8 @@ pre {
   height: 16px;
   display: block;
   background: #FF4C60;
-  -webkit-box-shadow: 2px 2px 8px rgba(255, 76, 96, 0.09);
-          box-shadow: 2px 2px 8px rgba(255, 76, 96, 0.09);
+  -webkit-box-shadow: 2px 2px 8px rgba(255, 76, 96, 0.09) !important;
+          box-shadow: 2px 2px 8px rgba(255, 76, 96, 0.09)!important;
   border-radius: 50%;
   -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
@@ -2262,8 +2262,8 @@ body.dark .blog-page-section .blog-single {
 }
 
 .shadow-dark, .desktop-header-3 .dropdown-menu, .form-control, .form-control:focus {
-  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-  box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1) !important;
+  box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1) !important;
 }
 
 .shadow-light {
