--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2818,3 +2818,14 @@ body {
   display: inline-block;
   background-color: green;
 }
+
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  /*opacity: 0;*/
+  transition: 2s all ease;
+}
+.reveal.active{
+  transform: translateY(0);
+  /*opacity: 1;*/
+}
